--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.card-grid {
+  --n: 3; /* number of rows*/
+  --m: 5; /* number of columns */
+  --h: calc((100vh - (var(--n) - 1) * var(--g)) / var(--n));
+  --w: calc((100vw - (var(--m) - 1) * var(--g)) / var(--m));
+  --g: 0px; /* control the gap */
+  --f: 0.8; /* control the scale factor */
+
+  display: grid;
+  gap: var(--g);
+  width: 100vw;
+  height: 100vh;
+  grid-template-columns: repeat(var(--m), auto);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 0;
+  height: 0;
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  transition: 0.35s linear;
 }
 
-.App-link {
-  color: #61dafb;
+.big {
+  width: calc(var(--w) * var(--f));
+  height: calc(var(--h) * var(--f));
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circle {
+  cursor: pointer;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+}
+
+.square {
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
+}
+
+.triangle {
+  cursor: pointer;
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
 }
